# assumerole

./: .gitignore  LICENSE  README.md  pyproject.toml
assumerole/: identity.py  main.py  utility.py
tests/: test_assumerole.py
